--- a/microservice1/.devcontainer/devcontainer.json
+++ b/microservice1/.devcontainer/devcontainer.json
@@ -14,8 +14,8 @@
 				"GitHub.copilot",
 				"GitHub.copilot-chat",
 				"ms-python.python",
-				"ms-python.debugpy",
-				"zxh404.vscode-proto3"
+				"zxh404.vscode-proto3",
+				"ms-python.debugpy"
 			]
 		}
 	}
